--- a/code/package.json
+++ b/code/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://thelindr.github.io/ToDo-App",
   "name": "react-starter",
   "version": "1.2.2",
   "private": true,
@@ -6,12 +7,18 @@
     "eslint-config-technigo": "^1.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-flip-move": "^3.0.1",
     "react-scripts": "1.0.16"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
