--- a/code/package.json
+++ b/code/package.json
@@ -8,7 +8,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-flip-move": "^3.0.1",
-    "react-scripts": "1.0.16"
+    "react-scripts": "1.0.16",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
